--- a/frontend/src/app/pages/session-page/session-page.component.scss
+++ b/frontend/src/app/pages/session-page/session-page.component.scss
@@ -3,3 +3,9 @@
 .camera-container {
   background-color: $primary-color;
 }
+
+.textbox {
+  background-color: $background-color;
+  border-style: solid;
+  border-color: $background-secondary-color;
+}
