--- a/frontend/src/app/components/toolbar/toolbar.component.html
+++ b/frontend/src/app/components/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     class="toolbar d-flex justify-content-between align-items-center px-2 py-2 rounded"
   >
     <div class="d-flex align-items-center">
-      <div>A-Eye</div>
+      <div role="button" (click)="goHome()">A-Eye</div>
       <div class="btn mx-2 btn-history">Past Sessions</div>
     </div>
     <div class="btn btn-start" (click)="navigateToSessionPage()">
