feat: past sessions

--- a/frontend/src/app/pages/landing-page/landing-page.component.html
+++ b/frontend/src/app/pages/landing-page/landing-page.component.html
@@ -1,5 +1,5 @@
 <div class="landing-page h-100 d-flex flex-column justify-content-start">
-  <app-toolbar class="w-100 z-index-1"></app-toolbar>
+  <app-toolbar class="w-100 z-index-1 position-fixed"></app-toolbar>
   <div
     class="h-100 w-50 landing-dialog d-flex flex-column justify-content-center align-items-center"
   >
