--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,6 @@
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+
 
 // Global variables
 $fonts: Roboto, "Helvetica Neue", sans-serif;
