--- a/frontend/src/app/components/toolbar/toolbar.component.html
+++ b/frontend/src/app/components/toolbar/toolbar.component.html
@@ -1,10 +1,12 @@
-<div class="position-fixed w-100 px-3 py-3 z-index-1">
+<div class="w-100 px-3 py-3 z-index-1">
   <div
     class="toolbar d-flex justify-content-between align-items-center px-2 py-2 rounded"
   >
     <div class="d-flex align-items-center">
       <div role="button" (click)="goHome()">A-Eye</div>
-      <div class="btn mx-2 btn-history">Past Sessions</div>
+      <div class="btn mx-2 btn-history" (click)="goToHistory()">
+        Past Sessions
+      </div>
     </div>
     <div class="btn btn-start" (click)="navigateToSessionPage()">
       Start Session
